--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     //Support Libraries
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:design:27.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.0"
