--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
         }
 
         buildConfigField "String", "API_URL", "\"http://backend-alpha.biologiatotal.com.br\""
-
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -55,6 +55,7 @@ dependencies {
     //Support Libraries
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:design:27.1.0'
+    compile 'com.android.support:cardview-v7:27.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // ViewModel and LiveData
