--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,14 @@ allprojects {
     }
 }
 
+ext {
+    supportLibVersion = "27.1.0"
+    daggerVersion = "2.11"
+    retrofitVersion =  "2.3.0"
+    androidComponentsVersion = "1.1.0"
+    roomVersion = "1.0.0"
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
